// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App create 1`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 ksMitv"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 fWtxei"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 dVDNsM"
      >
        <header
          class="StyledBox-sc-13pk1d4-0 fYhfQh"
        >
          <div
            class="StyledGrid-sc-1wofa1l-0 dzOdPB"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 cZVWOV"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 jixZPk"
            >
              <h1
                class="StyledHeading-sc-1rdh4aw-0 eWRtdx"
              >
                grommet designer
              </h1>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 hWvBss"
            >
              <p
                class="StyledParagraph-sc-tbetod-0 ccTRWL"
              >
                design with grommet components
              </p>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 beSXpv"
            >
              <a
                class="StyledButton-sc-323bzc-0 cYtGvH"
                href="/_new"
                title="start a new design"
              >
                New
              </a>
            </div>
          </div>
        </header>
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 eWqFqG"
      />
      <div
        class="StyledBox-sc-13pk1d4-0 gqKXmE"
      >
        <span
          class="StyledText-sc-1sadyjn-0 igawMg"
        >
          Hi, ... maybe create a new design?
        </span>
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 eWqFqG"
      />
      <div
        class="StyledBox-sc-13pk1d4-0 dVDNsM"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 judZmN FileInput__ContentsBox-sc-1jzq7im-0 cYjMQm"
        >
          <input
            accept=".json"
            class="StyledFileInput-sc-rl7ywv-0 frjtxY"
            type="file"
          />
          <div
            class="StyledBox-sc-13pk1d4-0 Nvcnc"
          >
            <span
              class="StyledText-sc-1sadyjn-0 bEBFBF FileInput__Message-sc-1jzq7im-2 jGndZo"
            >
              Import - drop design file here
            </span>
            <a
              class="StyledAnchor-sc-1rp7lwl-0 ibZVEM"
              tabindex="-1"
            >
              browse
            </a>
          </div>
        </div>
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 eWqFqG"
      />
      <div
        class="StyledBox-sc-13pk1d4-0 jDvbfO"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 dVDNsM"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 WdSth"
          >
            <h2
              class="StyledHeading-sc-1rdh4aw-0 eMUNZA"
            >
              storage
            </h2>
            <div
              class="StyledBox__StyledBoxGap-sc-13pk1d4-1 qRNKF"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 bQOdBX"
            >
              <svg
                aria-label="Bar meter with values 0, 0, 0, 0, 0, 0, 0 out of 100"
                class="StyledMeter-sc-nsxarx-0 fCRjcO"
                height="24"
                preserveAspectRatio="none"
                viewBox="0 0 384 24"
                width="384"
              >
                <path
                  d="M 0,12 L 384,12"
                  fill="none"
                  stroke="#F2F2F2"
                  stroke-linecap="square"
                  stroke-opacity="0.4"
                  stroke-width="24"
                />
              </svg>
              <div
                class="StyledBox__StyledBoxGap-sc-13pk1d4-1 nSztt"
              />
              <span
                class="StyledText-sc-1sadyjn-0 iUzxnW"
              >
                0 K total
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 eWqFqG"
      />
      <div
        class="StyledBox-sc-13pk1d4-0 dVDNsM"
      >
        <footer
          class="StyledBox-sc-13pk1d4-0 kqfjRo"
        >
          <button
            aria-label="Change settings"
            class="StyledButton-sc-323bzc-0 dvzzNv"
            type="button"
          >
            <svg
              aria-label="Brush"
              class="StyledIcon-sc-ofa7kd-0 bqRbRY"
              viewBox="0 0 24 24"
            >
              <path
                d="M9.312 11.73a5.001 5.001 0 0 0-5.362 1.12c-1.953 1.952-1.414 8.485-1.414 8.485s6.532.538 8.485-1.415a5.001 5.001 0 0 0 1.12-5.362L22.334 4.364a1.997 1.997 0 0 0 0-2.828 1.995 1.995 0 0 0-2.828 0L9.312 11.729zm1.002-1.617 1.838 1.838 1.697 1.697"
                fill="none"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </button>
        </footer>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`App create 2`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 ksMitv"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 fWtxei"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 dVDNsM"
      >
        <header
          class="StyledBox-sc-13pk1d4-0 ckSugz"
        >
          <div
            class="StyledGrid-sc-1wofa1l-0 dzOdPB"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 cZVWOV"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 jixZPk"
            >
              <h1
                class="StyledHeading-sc-1rdh4aw-0 eWRtdx"
              >
                new design
              </h1>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 hWvBss"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 beSXpv"
            >
              <button
                aria-label="cancel creating a new design"
                class="StyledButton-sc-323bzc-0 geHpTD"
                type="button"
              >
                <svg
                  aria-label="Close"
                  class="StyledIcon-sc-ofa7kd-0 bqRbRY"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="m3 3 18 18M3 21 21 3"
                    fill="none"
                    stroke="#000"
                    stroke-width="2"
                  />
                </svg>
              </button>
            </div>
          </div>
        </header>
        <form>
          <div
            class="StyledBox-sc-13pk1d4-0 lAiqC FormField__FormFieldBox-sc-m9hood-0 bJYjgC"
          >
            <label
              class="StyledText-sc-1sadyjn-0 hjOyAZ"
              for="name"
            >
              name
            </label>
            <div
              class="StyledBox-sc-13pk1d4-0 eYrCJw FormField__FormFieldContentBox-sc-m9hood-1 hcNNyd"
            >
              <div
                class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 jHtDgz"
              >
                <input
                  autocomplete="off"
                  class="StyledTextInput-sc-1x30a0s-0 fnwidb"
                  id="name"
                  name="name"
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 lciERv"
            id="startWith"
            role="radiogroup"
          >
            <label
              class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 jwFtvV"
              for="startWith-start with a blank design"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 irUZj StyledRadioButton-sc-g1f6ld-5 PXmNZ"
              >
                <input
                  checked=""
                  class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 bBXsOB"
                  id="startWith-start with a blank design"
                  name="startWith"
                  tabindex="0"
                  type="radio"
                  value="start with a blank design"
                />
                <div
                  class="StyledBox-sc-13pk1d4-0 hUkyGR StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 kEoueS"
                >
                  <svg
                    class="StyledRadioButton__StyledRadioButtonIcon-sc-g1f6ld-3 fwWmrz"
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 24 24"
                  >
                    <circle
                      cx="12"
                      cy="12"
                      r="6"
                    />
                  </svg>
                </div>
              </div>
              <span
                class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
              >
                start with a blank design
              </span>
            </label>
            <div
              class="StyledBox__StyledBoxGap-sc-13pk1d4-1 nSztt"
            />
            <label
              class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 jwFtvV"
              for="startWith-duplicate an existing design"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 irUZj StyledRadioButton-sc-g1f6ld-5 PXmNZ"
              >
                <input
                  class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 bBXsOB"
                  id="startWith-duplicate an existing design"
                  name="startWith"
                  tabindex="-1"
                  type="radio"
                  value="duplicate an existing design"
                />
                <div
                  class="StyledBox-sc-13pk1d4-0 injqDh StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 kEoueS"
                />
              </div>
              <span
                class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
              >
                duplicate an existing design
              </span>
            </label>
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 lAiqC FormField__FormFieldBox-sc-m9hood-0 bJYjgC"
          >
            <label
              class="StyledText-sc-1sadyjn-0 hjOyAZ"
            >
              theme
            </label>
            <div
              class="StyledBox-sc-13pk1d4-0 efNsjV FormField__FormFieldContentBox-sc-m9hood-1 XhivO"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 bvWvwP"
                role="radiogroup"
              >
                <label
                  class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 jwFtvV"
                  for="grommet"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 irUZj StyledRadioButton-sc-g1f6ld-5 PXmNZ"
                  >
                    <input
                      checked=""
                      class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 bBXsOB"
                      id="grommet"
                      name="theme"
                      tabindex="0"
                      type="radio"
                      value="grommet"
                    />
                    <div
                      class="StyledBox-sc-13pk1d4-0 hUkyGR StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 kEoueS"
                    >
                      <svg
                        class="StyledRadioButton__StyledRadioButtonIcon-sc-g1f6ld-3 fwWmrz"
                        preserveAspectRatio="xMidYMid meet"
                        viewBox="0 0 24 24"
                      >
                        <circle
                          cx="12"
                          cy="12"
                          r="6"
                        />
                      </svg>
                    </div>
                  </div>
                  <span
                    class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
                  >
                    grommet
                  </span>
                </label>
                <div
                  class="StyledBox__StyledBoxGap-sc-13pk1d4-1 nSztt"
                />
                <label
                  class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 jwFtvV"
                  for="hpe"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 irUZj StyledRadioButton-sc-g1f6ld-5 PXmNZ"
                  >
                    <input
                      class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 bBXsOB"
                      id="hpe"
                      name="theme"
                      tabindex="-1"
                      type="radio"
                      value="hpe"
                    />
                    <div
                      class="StyledBox-sc-13pk1d4-0 injqDh StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 kEoueS"
                    />
                  </div>
                  <span
                    class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
                  >
                    hpe
                  </span>
                </label>
                <div
                  class="StyledBox__StyledBoxGap-sc-13pk1d4-1 nSztt"
                />
                <label
                  class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 jwFtvV"
                  for="other"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 irUZj StyledRadioButton-sc-g1f6ld-5 PXmNZ"
                  >
                    <input
                      class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 bBXsOB"
                      id="other"
                      name="theme"
                      tabindex="-1"
                      type="radio"
                      value="other"
                    />
                    <div
                      class="StyledBox-sc-13pk1d4-0 injqDh StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 kEoueS"
                    />
                  </div>
                  <span
                    class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
                  >
                    other
                  </span>
                </label>
              </div>
            </div>
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 lAiqC FormField__FormFieldBox-sc-m9hood-0 bJYjgC"
          >
            <label
              class="StyledText-sc-1sadyjn-0 hjOyAZ"
              for="includes"
            >
              include other designs to be able to copy their components
            </label>
            <div
              class="StyledBox-sc-13pk1d4-0 eYrCJw FormField__FormFieldContentBox-sc-m9hood-1 XhivO"
            >
              <button
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-label="none"
                class="StyledButton-sc-323bzc-0 eKvjSA StyledSelect__StyledSelectDropButton-sc-znp66n-5 hweaGw"
                type="button"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 kmCpPX"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 llKkdx"
                  >
                    <div
                      class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 jHtDgz"
                    >
                      <input
                        autocomplete="off"
                        class="StyledTextInput-sc-1x30a0s-0 hgBTwY StyledSelect__SelectTextInput-sc-znp66n-4 hPdVtq"
                        inert=""
                        name="includes"
                        placeholder="none"
                        readonly=""
                        tabindex="-1"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                  <div
                    class="StyledBox-sc-13pk1d4-0 iBKXSA"
                    style="min-width: auto;"
                  >
                    <svg
                      aria-label="FormDown"
                      class="StyledIcon-sc-ofa7kd-0 iVpWnA"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="m18 9-6 6-6-6"
                        fill="none"
                        stroke="#000"
                        stroke-width="2"
                      />
                    </svg>
                  </div>
                </div>
              </button>
            </div>
          </div>
          <footer
            class="StyledBox-sc-13pk1d4-0 DhbmI"
          >
            <button
              class="StyledButton-sc-323bzc-0 cYtGvH"
              title="create design"
              type="submit"
            >
              Create Design
            </button>
          </footer>
        </form>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`App create 3`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 ksMitv"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 fWtxei"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 dVDNsM"
      >
        <header
          class="StyledBox-sc-13pk1d4-0 ckSugz"
        >
          <div
            class="StyledGrid-sc-1wofa1l-0 dzOdPB"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 cZVWOV"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 jixZPk"
            >
              <h1
                class="StyledHeading-sc-1rdh4aw-0 eWRtdx"
              >
                new design
              </h1>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 hWvBss"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 beSXpv"
            >
              <button
                aria-label="cancel creating a new design"
                class="StyledButton-sc-323bzc-0 geHpTD"
                type="button"
              >
                <svg
                  aria-label="Close"
                  class="StyledIcon-sc-ofa7kd-0 bqRbRY"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="m3 3 18 18M3 21 21 3"
                    fill="none"
                    stroke="#000"
                    stroke-width="2"
                  />
                </svg>
              </button>
            </div>
          </div>
        </header>
        <form>
          <div
            class="StyledBox-sc-13pk1d4-0 lAiqC FormField__FormFieldBox-sc-m9hood-0 bJYjgC"
          >
            <label
              class="StyledText-sc-1sadyjn-0 hjOyAZ"
              for="name"
            >
              name
            </label>
            <div
              class="StyledBox-sc-13pk1d4-0 eYrCJw FormField__FormFieldContentBox-sc-m9hood-1 hcNNyd"
            >
              <div
                class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 jHtDgz"
              >
                <input
                  autocomplete="off"
                  class="StyledTextInput-sc-1x30a0s-0 fnwidb"
                  id="name"
                  name="name"
                  value="test design"
                />
              </div>
            </div>
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 lciERv"
            id="startWith"
            role="radiogroup"
          >
            <label
              class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 jwFtvV"
              for="startWith-start with a blank design"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 irUZj StyledRadioButton-sc-g1f6ld-5 PXmNZ"
              >
                <input
                  checked=""
                  class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 bBXsOB"
                  id="startWith-start with a blank design"
                  name="startWith"
                  tabindex="0"
                  type="radio"
                  value="start with a blank design"
                />
                <div
                  class="StyledBox-sc-13pk1d4-0 hUkyGR StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 kEoueS"
                >
                  <svg
                    class="StyledRadioButton__StyledRadioButtonIcon-sc-g1f6ld-3 fwWmrz"
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 24 24"
                  >
                    <circle
                      cx="12"
                      cy="12"
                      r="6"
                    />
                  </svg>
                </div>
              </div>
              <span
                class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
              >
                start with a blank design
              </span>
            </label>
            <div
              class="StyledBox__StyledBoxGap-sc-13pk1d4-1 nSztt"
            />
            <label
              class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 jwFtvV"
              for="startWith-duplicate an existing design"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 irUZj StyledRadioButton-sc-g1f6ld-5 PXmNZ"
              >
                <input
                  class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 bBXsOB"
                  id="startWith-duplicate an existing design"
                  name="startWith"
                  tabindex="-1"
                  type="radio"
                  value="duplicate an existing design"
                />
                <div
                  class="StyledBox-sc-13pk1d4-0 injqDh StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 kEoueS"
                />
              </div>
              <span
                class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
              >
                duplicate an existing design
              </span>
            </label>
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 lAiqC FormField__FormFieldBox-sc-m9hood-0 bJYjgC"
          >
            <label
              class="StyledText-sc-1sadyjn-0 hjOyAZ"
            >
              theme
            </label>
            <div
              class="StyledBox-sc-13pk1d4-0 efNsjV FormField__FormFieldContentBox-sc-m9hood-1 XhivO"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 bvWvwP"
                role="radiogroup"
              >
                <label
                  class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 jwFtvV"
                  for="grommet"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 irUZj StyledRadioButton-sc-g1f6ld-5 PXmNZ"
                  >
                    <input
                      checked=""
                      class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 bBXsOB"
                      id="grommet"
                      name="theme"
                      tabindex="0"
                      type="radio"
                      value="grommet"
                    />
                    <div
                      class="StyledBox-sc-13pk1d4-0 hUkyGR StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 kEoueS"
                    >
                      <svg
                        class="StyledRadioButton__StyledRadioButtonIcon-sc-g1f6ld-3 fwWmrz"
                        preserveAspectRatio="xMidYMid meet"
                        viewBox="0 0 24 24"
                      >
                        <circle
                          cx="12"
                          cy="12"
                          r="6"
                        />
                      </svg>
                    </div>
                  </div>
                  <span
                    class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
                  >
                    grommet
                  </span>
                </label>
                <div
                  class="StyledBox__StyledBoxGap-sc-13pk1d4-1 nSztt"
                />
                <label
                  class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 jwFtvV"
                  for="hpe"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 irUZj StyledRadioButton-sc-g1f6ld-5 PXmNZ"
                  >
                    <input
                      class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 bBXsOB"
                      id="hpe"
                      name="theme"
                      tabindex="-1"
                      type="radio"
                      value="hpe"
                    />
                    <div
                      class="StyledBox-sc-13pk1d4-0 injqDh StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 kEoueS"
                    />
                  </div>
                  <span
                    class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
                  >
                    hpe
                  </span>
                </label>
                <div
                  class="StyledBox__StyledBoxGap-sc-13pk1d4-1 nSztt"
                />
                <label
                  class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 jwFtvV"
                  for="other"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 irUZj StyledRadioButton-sc-g1f6ld-5 PXmNZ"
                  >
                    <input
                      class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 bBXsOB"
                      id="other"
                      name="theme"
                      tabindex="-1"
                      type="radio"
                      value="other"
                    />
                    <div
                      class="StyledBox-sc-13pk1d4-0 injqDh StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 kEoueS"
                    />
                  </div>
                  <span
                    class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
                  >
                    other
                  </span>
                </label>
              </div>
            </div>
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 lAiqC FormField__FormFieldBox-sc-m9hood-0 bJYjgC"
          >
            <label
              class="StyledText-sc-1sadyjn-0 hjOyAZ"
              for="includes"
            >
              include other designs to be able to copy their components
            </label>
            <div
              class="StyledBox-sc-13pk1d4-0 eYrCJw FormField__FormFieldContentBox-sc-m9hood-1 XhivO"
            >
              <button
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-label="none"
                class="StyledButton-sc-323bzc-0 eKvjSA StyledSelect__StyledSelectDropButton-sc-znp66n-5 hweaGw"
                type="button"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 kmCpPX"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 llKkdx"
                  >
                    <div
                      class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 jHtDgz"
                    >
                      <input
                        autocomplete="off"
                        class="StyledTextInput-sc-1x30a0s-0 hgBTwY StyledSelect__SelectTextInput-sc-znp66n-4 hPdVtq"
                        inert=""
                        name="includes"
                        placeholder="none"
                        readonly=""
                        tabindex="-1"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                  <div
                    class="StyledBox-sc-13pk1d4-0 iBKXSA"
                    style="min-width: auto;"
                  >
                    <svg
                      aria-label="FormDown"
                      class="StyledIcon-sc-ofa7kd-0 iVpWnA"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="m18 9-6 6-6-6"
                        fill="none"
                        stroke="#000"
                        stroke-width="2"
                      />
                    </svg>
                  </div>
                </div>
              </button>
            </div>
          </div>
          <footer
            class="StyledBox-sc-13pk1d4-0 DhbmI"
          >
            <button
              class="StyledButton-sc-323bzc-0 cYtGvH"
              title="create design"
              type="submit"
            >
              Create Design
            </button>
          </footer>
        </form>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`App create 4`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 ksMitv"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 dvyMKY"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 dvgDST"
      >
        <form>
          <div
            class="StyledBox-sc-13pk1d4-0 lAiqC FormField__FormFieldBox-sc-m9hood-0 bJYjgC"
          >
            <label
              class="StyledText-sc-1sadyjn-0 hjOyAZ"
              for="template"
            >
              screen template
            </label>
            <div
              class="StyledBox-sc-13pk1d4-0 eYrCJw FormField__FormFieldContentBox-sc-m9hood-1 XhivO"
            >
              <button
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-label="Open Drop; Selected: empty page"
                class="StyledButton-sc-323bzc-0 eKvjSA StyledSelect__StyledSelectDropButton-sc-znp66n-5 hweaGw"
                id="template"
                type="button"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 kmCpPX"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 llKkdx"
                  >
                    <div
                      class="StyledBox-sc-13pk1d4-0 dfFnRC"
                    >
                      <span
                        class="StyledText-sc-1sadyjn-0 epapWo"
                      >
                        empty page
                      </span>
                      <div
                        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 nSztt"
                      />
                      <span
                        class="StyledText-sc-1sadyjn-0 fdhJqR"
                      >
                        generic
                      </span>
                    </div>
                    <input
                      class="StyledSelect__HiddenInput-sc-znp66n-2 llEruv"
                      id="template__input"
                      inert=""
                      name="template"
                      readonly=""
                      type="text"
                    />
                  </div>
                  <div
                    class="StyledBox-sc-13pk1d4-0 iBKXSA"
                    style="min-width: auto;"
                  >
                    <svg
                      aria-label="FormDown"
                      class="StyledIcon-sc-ofa7kd-0 iVpWnA"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="m18 9-6 6-6-6"
                        fill="none"
                        stroke="#000"
                        stroke-width="2"
                      />
                    </svg>
                  </div>
                </div>
              </button>
            </div>
          </div>
          <footer
            class="StyledBox-sc-13pk1d4-0 eYqvdH"
          >
            <button
              class="StyledButton-sc-323bzc-0 cYtGvH"
              title="Use selected screen template"
              type="submit"
            >
              Use Template
            </button>
          </footer>
        </form>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`App create 5`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 ksMitv"
  >
    <div
      class="StyledGrommet-sc-19lkkz7-0 duqZGP"
      id="designer-canvas"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 iwqcWs"
        id="2"
        style="outline: 1px dashed red;"
        tabindex="-1"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 guSTqA"
          id="3"
          tabindex="-1"
        >
          <div
            class="sc-gjcoXW jUHhzZ"
          >
            <p
              class="StyledParagraph-sc-tbetod-0 gJzsVc"
            >
              This PageContent is currently empty. Add some content to it.
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
